# igvc-firmware

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CAN_send.ino  CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp  mbed_config.h  odrive_commands.txt  setup.sh
.circleci/: config.yml  lint.sh
log/: latest_list
mbed-maintenance/: README.md
protos/: igvc.proto
src/arduino_can/CAN_recieve/: CAN_recieve.ino
src/arduino_estop/examples/: TX.ino
src/arduino_estop/examples/RX/: RX.ino
src/arduino_estop/tx/final_tx_2/: final_tx_2.ino
src/encoder_testbench/: readme.md
src/estop/: readme.md
src/estop/rx/final_rx/: final_rx.ino
src/estop/tx/final_tx_2/: final_tx_2.ino
src/joystick_control/: readme.md
src/light_shield/: readme.md
src/main/mbed/: main.cpp
src/main/mbed/can/: CANCommon.cpp  CANCommon.h
src/main/mbed/communication/: ParseProtobufMbed.cpp  ParseProtobufMbed.h  swerve_commands.proto
src/main/mbed/mbed/: main.cpp
src/main/mbed/mbed/communication/: ParseProtobufMbed.cpp  swerve_commands.proto
src/main/mbed/motors/: MotorCommand.cpp  MotorCommand.h
src/mbed/: CMakeLists.txt  constants.h  main.cpp  pid.cpp  pid.h  threaded_main.cpp  util.h  utils.h
src/mbed/encoder_pair/: encoder_pair.cpp  encoder_pair.h
src/mbed/protos/: igvc.proto
src/mbed/sabertooth_controller/: sabertooth_controller.cpp  sabertooth_controller.h
src/mbed/src/: main.cpp
src/motor_shield/: readme.md
src/motor_testbench/: readme.md
src/neopixel/Neopixel/: Neopixel.ino
src/odrive/: config_axis_0.py  config_axis_0_encoder.py  config_axis_1.py  config_brake_resistor.py  config_odrive.py  final_drive_calib.py  full_motor_calib.py  swervi_motor_calib.py
src/odrive/tools/: swervi_tools.py
src/speed_light/: readme.md
src/stepper/sender/sender/: sender.ino
src/stepper/stepper_driver/: stepper_driver.ino
src/test/CANTest/mbed/: main.cpp
src/test/EthernetTest/EthernetTestClient/: CMakeCache.txt  main.cpp
src/test/EthernetTest/EthernetTestClient/lib/mbed-cmake/mbed-src/: cmake_install.cmake
src/test/EthernetTest/EthernetTestServer/: EthernetSocket.cpp  ParseProtobuf.h  main.cpp
src/test/LidarLite/computer/: Makefile
src/test/LidarLite/computer/communication/: ParseProtobuf.cpp  ParseProtobuf.h
src/test/LidarLite/mbed/: main.cpp  utils.h
src/test/LidarLite/mbed/communication/: ParseProtobufMbed.h
src/test/SwerveDirveModule/computer/: ParseProtobufMbed.cpp  ParseProtobufMbed.h  cmake_install.cmake  count.proto  main.cpp
src/test/SwerveDirveModule/computer/communication/: EthernetSocket.h
src/test/SwerveDirveModule/computer/lib/mbed-cmake/mbed-src/: Makefile
src/test/SwerveDirveModule/mbed/communication/: ParseProtobufMbed.cpp  lidar_lite.proto
src/test/SwerveDirveModule/mbed/lidar_lite/: LidarLite.cpp  LidarLite.h  LidarLiteController.cpp  LidarLiteController.h
src/test/SwerveDriveModule/computer/: main.cpp
src/test/SwerveDriveModule/computer/communication/: ParseProtobuf.cpp  ParseProtobuf.h  swerve_commands.proto
src/test/SwerveDriveModule/mbed/: main.cpp
src/test/SwerveDriveModule/mbed/communication/: ParseProtobufMbed.cpp  ParseProtobufMbed.h  swerve_commands.proto
src/test/blink/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
src/test/blink/lib/mbed-cmake/mbed-src/: Makefile
src/walli_test/petunia_firmware/: petunia_firmware.ino
src/walli_test/sketch_feb17a/: sketch_feb17a.ino
